backend/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /v1/user
          backend:
            serviceName: node-recipe-app
            servicePort: 8080
        - path: /v1/recepie
          backend:
            serviceName: node-recipe-app
            servicePort: 8080
